--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@reduxjs/toolkit": "^1.9.1",
+    "font-awesome": "^4.7.0",
+    "framer-motion": "^8.4.3",
+    "mongodb": "^4.13.0",
     "next": "13.1.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-awesome-reveal": "^4.1.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "sass": "^1.57.1",
+    "sharp": "^0.31.3",
+    "swiper": "^8.4.5",
+    "uuid": "^9.0.0"
   }
 }
